added example of the select method

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,28 @@
 # Copy from .env.local on the Vercel dashboard
 # https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
-POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
+POSTGRES_URL=postgresql://neondb_owner:npg_7HQKEwWrdm1N@ep-ancient-firefly-ahf95nyh-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_URL_NON_POOLING=postgresql://neondb_owner:npg_7HQKEwWrdm1N@ep-ancient-firefly-ahf95nyh.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require
+POSTGRES_USER=neondb_owner
+POSTGRES_HOST=ep-ancient-firefly-ahf95nyh-pooler.c-3.us-east-1.aws.neon.tech
+POSTGRES_PASSWORD=npg_7HQKEwWrdm1N
+POSTGRES_DATABASE=neondb
+POSTGRES_URL_NO_SSL=postgresql://neondb_owner:npg_7HQKEwWrdm1N@ep-ancient-firefly-ahf95nyh-pooler.c-3.us-east-1.aws.neon.tech/neondb
+POSTGRES_PRISMA_URL=postgresql://neondb_owner:npg_7HQKEwWrdm1N@ep-ancient-firefly-ahf95nyh-pooler.c-3.us-east-1.aws.neon.tech/neondb?connect_timeout=15&sslmode=require
 
 # `openssl rand -base64 32`
-AUTH_SECRET=
+AUTH_SECRET=dKnI32d8lQp2I02FjKAsKB9CTwNdmEg5Ba3rgvljryg=
 AUTH_URL=http://localhost:3000/api/auth
+
+###########################################################################################
+# Recommended for most uses
+DATABASE_URL=postgresql://neondb_owner:npg_7HQKEwWrdm1N@ep-ancient-firefly-ahf95nyh-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require
+
+# For uses requiring a connection without pgbouncer
+DATABASE_URL_UNPOOLED=postgresql://neondb_owner:npg_7HQKEwWrdm1N@ep-ancient-firefly-ahf95nyh.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require
+
+# Parameters for constructing your own connection string
+PGHOST=ep-ancient-firefly-ahf95nyh-pooler.c-3.us-east-1.aws.neon.tech
+PGHOST_UNPOOLED=ep-ancient-firefly-ahf95nyh.c-3.us-east-1.aws.neon.tech
+PGUSER=neondb_owner
+PGDATABASE=neondb
+PGPASSWORD=npg_7HQKEwWrdm1N
